# gemm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cuda  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.cpp
include/gemm/: attention.hpp  attention_cuda.cuh  gemm_cpu.hpp  gemm_cuda.cuh  softmax.hpp  softmax_cuda.cuh
src/: attention_cpu.cpp  attention_cuda.cu  bench_timing.cuh  gemm_cpu.cpp  gemm_cuda.cu  softmax_cpu.cpp  softmax_cuda.cu
tests/: test_attention.cpp  test_correctness.cpp  test_softmax.cpp
